--- a/templates/activitytree/programjs.html
+++ b/templates/activitytree/programjs.html
@@ -32,7 +32,26 @@
 
 {% block content %}
 
+    <div class="row">
 
+        <div class="col-md-12">
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+            <h5 class="panel-title"> HTML Renderizado </h5>
+
+            </div>
+
+            <div class="panel-body">
+                <h3 id="respuesta"> Nada </h3>
+            </div>
+
+
+
+        </div>
+    </div>
+
+    </div>
 
 <div class="row">
 
@@ -66,31 +85,35 @@
           </div>
         </div>
 
-</div>
-    <div class="col-md-8">
-
-        <div class="panel panel-default">
-            <div class="panel-heading">
-            <h5 style="display: inline;" class="panel-title">{{program_quiz.title}}</h5>
-
-            </div>
-            <div id="editor_alert">
-
-                </div>
-
-            <div class="panel-body">
-                <div id="editor">{{program_quiz.initial_code}}</div>
-            </div>
-
-             <div class="panel-footer">
-                 <button type="button" id="sendButton"  data-complete-text="finished!" data-loading-text="Trabajando..."  class="btn btn-primary btn-sm" autocomplete="off">Ejecuta el código</button>
-                 <button type="button" id="resetButton" class="btn btn-default btn-sm"> Reinicia el código</button>
-
-             </div>
-
-        </div>
     </div>
 
+
+
+
+
+        <div class="col-md-8 ">
+
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                <h5 style="display: inline;" class="panel-title">{{program_quiz.title}}</h5>
+
+                </div>
+                <div id="editor_alert">
+
+                    </div>
+
+                <div class="panel-body">
+                    <div id="editor">{{program_quiz.initial_code}}</div>
+                </div>
+
+                 <div class="panel-footer">
+                     <button type="button" id="sendButton"  data-complete-text="finished!" data-loading-text="Trabajando..."  class="btn btn-primary btn-sm" autocomplete="off">Ejecuta el código</button>
+                     <button type="button" id="resetButton" class="btn btn-default btn-sm"> Reinicia el código</button>
+
+                 </div>
+
+            </div>
+        </div>
 
 
 
@@ -316,7 +339,7 @@ $(document).ready(function() {
             {  result.result = "Success";
                 }
 
-            result.totals = "Total de pruebas: " + details.total +" Fallidas: "+  details.failed + "Exitosas: " +  details.passed +" Tiempo: " + details.runtime;
+            result.totals = "Total de pruebas: " + details.total +"\nFallidas: "+  details.failed + "\nExitosas: " +  details.passed +" \nTiempo: " + details.runtime;
             $("#test_script").innerHTML="";
 
             if (suma !== undefined)
@@ -360,11 +383,11 @@ $(document).ready(function() {
          for (var i=0; i<result.failures.length; ++i)
          {
              $( "#result_panel_body").append("<p class='test_success'>Se esperaba: "+ result.failures[i].expected+"</p>");
-             $( "#result_panel_body").append("<p class='test_failure'>Se encontro: "+ result.failures[i].actual+"</p>");
+             $( "#result_panel_body").append("<p class='test_failure'>Se encontró: "+ result.failures[i].actual+"</p>");
          }
          for (var i=0; i<result.successes.length; ++i)
              $( "#result_panel_body").append("<p class='test_success'>" + result.successes[i].message+"</p>" );
-         $( "#result_panel_body").append("<p>" + result.totals+"</p>" );
+         $( "#result_panel_body").append("<pre>" + result.totals+"</pre>" );
 
           {% if user.is_authenticated %}
          $.ajax(
