--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -6,21 +6,7 @@
    <div class = "row">
 
         <div class="col-md-3">
-            <div class="row">
 
-                {% if XML_NAV %}
-                <form id="nav_form"   role="form" action="{{ root_id }}{{root}}" method = "POST">{% csrf_token %}
-
-
-                   <ul class="pager">
-                        <li ><span class="nav_prev" > &larr; Anterior</span></li>
-                        <li ><span class="nav_next">  Continuar &rarr;</span></li>
-                    </ul>
-
-                </form>
-                {% endif %}
-
-           </div>
 
             <div class="row">
                 <div class="panel panel-default">
@@ -29,7 +15,7 @@
                     </div>
 
                       <div class="panel-body">
-                            Panel content
+                           {{ video.content|safe }}
                       </div>
 
 
@@ -85,7 +71,7 @@
         // 4. The API will call this function when the video player is ready.
       function onPlayerReady(event) {
 
-          {% if video.startSeconds %}
+          {% if video.startSeconds or video.endSeconds %}
 
             event.target.cueVideoById({
             videoId: '{{video.youtube_id}}',
