--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -202,7 +202,7 @@
                          </div>
                       [[#show_attempts]]
                         <div class="col-md-4 text-center">
-                              <span class="h3">[[num_attempts]] de [[attempt_limit]]</span>
+                              <span class="h3">[[num_attempts]]</span>
                               <br/>
 
                              <small>INTENTOS</small>
