--- a/templates/activitytree/program.html
+++ b/templates/activitytree/program.html
@@ -82,9 +82,21 @@
                 <div id="editor">{{program_quiz.initial_code}}</div>
             </div>
 
-             <div class="panel-footer">
-                 <button type="button" id="sendButton"  data-complete-text="finished!" data-loading-text="Trabajando..."  class="btn btn-primary btn-sm" autocomplete="off">Ejecuta el código</button>
-                 <button type="button" id="resetButton" class="btn btn-default btn-sm"> Reinicia el código</button>
+         <div class="panel-footer">
+
+  <button type="button" id="sendButton"  data-complete-text="finished!" data-loading-text="Trabajando..."  class="btn btn-primary btn-sm" autocomplete="off">Ejecuta el código</button>
+          <button type="button" id="resetButton" class="btn btn-default btn-sm "> Reinicia el código</button>
+
+
+
+             <span id="num_attempts" class="text-info pull-right">  </span>
+
+
+
+
+       </div>
+
+
 
              </div>
 
@@ -203,6 +215,18 @@ $(document).ready(function() {
             task_id = 0;
             number_of_tries = 0;
 
+            var num_attempts = $xml.find("item[is_current='True']").attr('num_attempts');
+            var attempt_limit = $xml.find("item[is_current='True']").attr('attempt_limit');
+
+            $('#num_attempts').html("intentos: " + num_attempts );
+            if (attempt_limit <100 && num_attempts >= attempt_limit) {
+                    setTimetout(function() {
+                           $("#sendButton").attr('disabled', 'disabled'); // Disables the button correctly.
+
+                           }, 0);
+                    }
+
+
             Mustache.tags = ['[[', ']]'];
             success_template = $('#success_template').html();
             Mustache.parse(success_template);
@@ -253,6 +277,8 @@ $(document).ready(function() {
          var code = editor.getValue();
 
 
+
+
            $.ajax(
                 {
                     url: '/execute_queue',
@@ -265,6 +291,7 @@ $(document).ready(function() {
                     "keypresses": keypresses, "mousepresses": mousepresses, "mousemovement": mouse }),
                     dataType: "json",
                     success: function(data, textStatus, jqXHR) {
+
 
                             task_id =data.id;
                             number_of_tries=0;
@@ -308,7 +335,9 @@ $(document).ready(function() {
                     {
 
 
-                        $("#sendButton").button('reset');
+
+
+
 
                         var result = data.result;
                         if (result.result == "Failure")
@@ -353,6 +382,21 @@ $(document).ready(function() {
                         //for (var i=0; i<info_list.length; i++){
                         // $('<p>'+ info_list[i]+'<p/>', {class:"p"}).appendTo("#result_panel_body");
                         //}
+
+                         $("#sendButton").button('reset');
+                         num_attempts++;
+                         $('#num_attempts').html("intentos: " + num_attempts );
+                         if (attempt_limit <100 && num_attempts >= attempt_limit) {
+                                 setTimetout(function() {
+                                        $("#sendButton").attr('disabled', 'disabled'); // Disables the button correctly.
+
+                                        }, 0);
+                                 }
+
+
+
+
+
                     }
                     else
                     {
