--- a/templates/activitytree/programjs.html
+++ b/templates/activitytree/programjs.html
@@ -126,6 +126,7 @@
                  <div class="panel-footer">
                      <button type="button" id="sendButton"  data-complete-text="finished!" data-loading-text="Trabajando..."  class="btn btn-primary btn-sm" autocomplete="off">Ejecuta el código</button>
                      <button type="button" id="resetButton" class="btn btn-default btn-sm"> Reinicia el código</button>
+                     <span id="num_attempts" class="text-info pull-right">  </span>
 
                  </div>
 
@@ -241,6 +242,16 @@ $(document).ready(function() {
             var original_code = editor.getValue();
             task_id = 0;
             number_of_tries = 0;
+            var num_attempts = $xml.find("item[is_current='True']").attr('num_attempts');
+            var attempt_limit = $xml.find("item[is_current='True']").attr('attempt_limit');
+
+            $('#num_attempts').html("intentos: " + num_attempts );
+            if (attempt_limit <100 && num_attempts >= attempt_limit) {
+                    setTimetout(function() {
+                           $("#sendButton").attr('disabled', 'disabled'); // Disables the button correctly.
+
+                           }, 0);
+                    }
 
             Mustache.tags = ['[[', ']]'];
             success_template = $('#success_template').html();
@@ -289,6 +300,7 @@ $(document).ready(function() {
 
          var $btn = $(this).button('loading');
 
+
          var code = editor.getValue();
 
          var result =
@@ -308,6 +320,11 @@ $(document).ready(function() {
          s.type = "text/javascript";
          s.innerHTML = code;
 
+
+         num_attempts++;
+         $('#num_attempts').html("intentos: " + num_attempts );
+
+
          try{
              $("head").append(s);
              }
@@ -320,6 +337,12 @@ $(document).ready(function() {
                 for (var i=0; i<result.errors.length; ++i)
                     $( "#result_panel_body").append("<p class='test_error'>"+ result.errors[i]+"</p>" );
                 $('#main_tab a[href="#results"]').tab('show');
+                if (attempt_limit <100 && num_attempts >= attempt_limit) {
+                 setTimetout(function() {
+                        $("#sendButton").attr('disabled', 'disabled'); // Disables the button correctly.
+
+                        }, 0);
+                 }
 
                 return
             }
@@ -413,6 +436,12 @@ $(document).ready(function() {
 
                             task_id =data.id;
                             number_of_tries=0;
+                            if (attempt_limit <100 && num_attempts >= attempt_limit) {
+                            setTimetout(function() {
+                            $("#sendButton").attr('disabled', 'disabled'); // Disables the button correctly.
+
+                        }, 0);
+                 }
 
 
 
