--- a/templates/activitytree/programjs.html
+++ b/templates/activitytree/programjs.html
@@ -242,6 +242,8 @@ $(document).ready(function() {
             var original_code = editor.getValue();
             task_id = 0;
             number_of_tries = 0;
+
+             {% if XML_NAV %}
             var num_attempts = $xml.find("item[is_current='True']").attr('num_attempts');
             var attempt_limit = $xml.find("item[is_current='True']").attr('attempt_limit');
 
@@ -252,7 +254,7 @@ $(document).ready(function() {
 
                            }, 0);
                     }
-
+            {% endif %}
             Mustache.tags = ['[[', ']]'];
             success_template = $('#success_template').html();
             Mustache.parse(success_template);
@@ -320,10 +322,10 @@ $(document).ready(function() {
          s.type = "text/javascript";
          s.innerHTML = code;
 
-
+        {% if XML_NAV %}
          num_attempts++;
          $('#num_attempts').html("intentos: " + num_attempts );
-
+         {% endif %}
 
          try{
              $("head").append(s);
@@ -337,12 +339,7 @@ $(document).ready(function() {
                 for (var i=0; i<result.errors.length; ++i)
                     $( "#result_panel_body").append("<p class='test_error'>"+ result.errors[i]+"</p>" );
                 $('#main_tab a[href="#results"]').tab('show');
-                if (attempt_limit <100 && num_attempts >= attempt_limit) {
-                 setTimetout(function() {
-                        $("#sendButton").attr('disabled', 'disabled'); // Disables the button correctly.
 
-                        }, 0);
-                 }
 
                 return
             }
@@ -436,12 +433,6 @@ $(document).ready(function() {
 
                             task_id =data.id;
                             number_of_tries=0;
-                            if (attempt_limit <100 && num_attempts >= attempt_limit) {
-                            setTimetout(function() {
-                            $("#sendButton").attr('disabled', 'disabled'); // Disables the button correctly.
-
-                        }, 0);
-                 }
 
 
 
