--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -47,7 +47,7 @@
 
 <div class="row">
   <div class="col-md-6">
-      <a id="login-facebook-btn" href="/facebook/get_login" class="btn btn-block btn-social btn-facebook "> <i class="fa fa-facebook"></i>
+      <a id="login-facebook-btn" href="/facebook/get_login?next={{ next }}" class="btn btn-block btn-social btn-facebook "> <i class="fa fa-facebook"></i>
         Regístrate con Facebook</a></div>
   <div class="col-md-1"> </div>
 
